# regex-tui

./: Cargo.toml  README.md
src/: app.rs  event.rs  handler.rs  main.rs
