[package]
name = "regex-tui"
version = "0.1.0"
authors = ["Jokler <jokler@protonmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.27.0"
regex = "1.9.6"
ratatui = { version = "0.23.0", default-features = false, features = ["crossterm"] }
# [dependencies.tui]
# version = "0.16.0"
# default-features = false
# features = ["crossterm"]
